--- a/UploadControl.xaml
+++ b/UploadControl.xaml
@@ -6,12 +6,20 @@
              xmlns:local="clr-namespace:Ark"
              mc:Ignorable="d" 
              d:DesignHeight="163" d:DesignWidth="800">
+    <UserControl.DataContext>
+        <local:UploadDocumentsModel/>
+    </UserControl.DataContext>
     <Grid Background="#FFE5E5E5">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Button Content="Загрузить" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Top" Height="30" Width="80" Grid.Row="1"/>
-        <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}" Margin="0,0,0,0" Grid.Row="0"/>
+        <Button Content="Загрузить" HorizontalAlignment="Center" Margin="3,3,3,3" VerticalAlignment="Top" Height="30" Width="80" Grid.Row="1" Command="{Binding AddFilesToQueue}"/>
+        <DataGrid ItemsControl.ItemsSource="{Binding Queue, Mode=OneWay}" Margin="3,3,3,3" Grid.Row="0" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Название" Binding="{Binding Name, Mode=OneWay}"/>
+                <DataGridTextColumn Header="Статус" Binding="{Binding Status, Mode=OneWay}"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </UserControl>
