--- a/Tabs/Search/SearchControl.xaml
+++ b/Tabs/Search/SearchControl.xaml
@@ -5,17 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Ark.Tabs.Search"
              mc:Ignorable="d" 
-             d:DesignHeight="181" d:DesignWidth="490.38">
-    <UserControl.DataContext>
-        <local:SearchModel/>
-    </UserControl.DataContext>
-    <Grid Background="#FFFFFFFF">
+             d:DesignHeight="163" d:DesignWidth="800"
+             d:DataContext="{d:DesignInstance local:SearchModel}">
+    <Grid Background="#FFFFFFFF" Margin="0,0,0,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>        
+        </Grid.RowDefinitions>
         <Grid Grid.Row="0" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
@@ -30,7 +28,7 @@
                 <DataGridTextColumn Header="Название" Binding="{Binding Name}"/>
             </DataGrid.Columns>
         </DataGrid>
-            <Grid Grid.Row="2">
+        <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition/>
