--- a/Tabs/Search/SearchControl.xaml
+++ b/Tabs/Search/SearchControl.xaml
@@ -3,10 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Ark.Tabs.Search"
+             xmlns:local="clr-namespace:Ark.Tabs.Search" 
+             xmlns:ark="clr-namespace:Ark"
              mc:Ignorable="d" 
-             d:DesignHeight="163" d:DesignWidth="800"
+             d:DesignHeight="163" d:DesignWidth="494.981"
              d:DataContext="{d:DesignInstance local:SearchModel}">
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+    </UserControl.Resources>
     <Grid Background="#FFFFFFFF" Margin="0,0,0,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -19,13 +23,65 @@
                 <ColumnDefinition/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <TextBox HorizontalAlignment="Stretch" Margin="3,3,3,3" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Row="1"/>
-            <Button Content="Поиск" HorizontalAlignment="Stretch" Margin="3,3,3,3" VerticalAlignment="Center" Width="55" Grid.Column="1"/>
+            <ark:EasilyDefocusableTextBox Text="{Binding SearchText}" 
+                     HorizontalAlignment="Stretch" 
+                     Margin="3,3,3,3" 
+                     TextWrapping="Wrap" 
+                     VerticalAlignment="Center" 
+                     Grid.Row="1">
+                <TextBox.Style>                    
+                    <Style TargetType="TextBox" xmlns:sys="clr-namespace:System;assembly=mscorlib">
+                        <Style.Resources>
+                            <VisualBrush x:Key="CueBannerBrush" AlignmentX="Left" AlignmentY="Center" Stretch="None">
+                                <VisualBrush.Visual>
+                                    <Label Content="Введите имя или текст файла" Foreground="LightGray" />
+                                </VisualBrush.Visual>
+                            </VisualBrush>
+                        </Style.Resources>
+                        <Style.Triggers>
+                            <Trigger Property="Text" Value="{x:Static sys:String.Empty}">
+                                <Setter Property="Background" Value="{StaticResource CueBannerBrush}" />
+                            </Trigger>
+                            <Trigger Property="Text" Value="{x:Null}">
+                                <Setter Property="Background" Value="{StaticResource CueBannerBrush}" />
+                            </Trigger>
+                            <Trigger Property="IsKeyboardFocused" Value="True">
+                                <Setter Property="Background" Value="White" />
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </TextBox.Style>
+            </ark:EasilyDefocusableTextBox>            
+            <Button Content="Поиск" 
+                    Command="{Binding SearchCommand}" 
+                    HorizontalAlignment="Stretch" 
+                    Margin="3,3,3,3" 
+                    VerticalAlignment="Center" 
+                    Width="55" 
+                    Grid.Column="1"/>
         </Grid>
-        <DataGrid Grid.Row="1" ItemsSource="{Binding DataItems}" Margin="3,3,3,3" AutoGenerateColumns="False">
+        <DataGrid Grid.Row="1" 
+                  ItemsSource="{Binding DataItems}" 
+                  Margin="3,3,3,3" 
+                  AutoGenerateColumns="False">
             <DataGrid.Columns>
-                <!--<DataGridCheckBoxColumn/>-->
+                <DataGridTemplateColumn Width="Auto">
+                    <DataGridTemplateColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <CheckBox IsChecked="{Binding DataContext.IsAllSelected, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}"
+                              HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.HeaderTemplate>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <CheckBox IsChecked="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                              HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
                 <DataGridTextColumn Header="Название" Binding="{Binding Name}"/>
+                <DataGridTextColumn Header="Найденный текст" Binding="{Binding Text}" 
+                                    Visibility="{Binding SearchTextIsNotEmpty, Converter={StaticResource BooleanToVisibilityConverter}}"/>
             </DataGrid.Columns>
         </DataGrid>
         <Grid Grid.Row="2">
@@ -36,12 +92,34 @@
                 <ColumnDefinition/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <Button Content="Предыдущая" Command="{Binding PreviousPageCommand}" Width="100" Height="30" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="3,3,3,3"/>
-            <TextBlock Text="{Binding CurrentPage}" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" MinWidth="50" TextAlignment="Right" />
-            <TextBlock Text="/" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" />
-            <TextBlock Text="{Binding TotalPages}" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Left" MinWidth="50" />
-            <Button Content="Следующая" Command="{Binding NextPageCommand}" Grid.Column="4" Height="30" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="3,3,3,3"/>
+            <Button Content="Предыдущая" 
+                    Command="{Binding PreviousPageCommand}" 
+                    Width="100" Height="30" 
+                    HorizontalAlignment="Center" VerticalAlignment="Center" 
+                    Margin="3,3,3,3"/>
+            <TextBlock Text="{Binding CurrentPage}" 
+                       Grid.Column="1" 
+                       VerticalAlignment="Center" HorizontalAlignment="Right" 
+                       MinWidth="50" 
+                       TextAlignment="Right" />
+            <TextBlock Text="/" 
+                       Grid.Column="2" 
+                       VerticalAlignment="Center" HorizontalAlignment="Center" />
+            <TextBlock Text="{Binding TotalPages}" 
+                       Grid.Column="3" 
+                       VerticalAlignment="Center" HorizontalAlignment="Left" 
+                       MinWidth="50" />
+            <Button Content="Следующая" 
+                    Command="{Binding NextPageCommand}" 
+                    Grid.Column="4" 
+                    Height="30" Width="100" 
+                    HorizontalAlignment="Center" VerticalAlignment="Center" 
+                    Margin="3,3,3,3"/>
         </Grid>
-        <Button Grid.Row="3" Content="Скачать отмеченные на данной странице" HorizontalAlignment="Center" Margin="3,3,3,3" VerticalAlignment="Top" Width="250"/>
+        <Button Grid.Row="3" 
+                Content="Скачать отмеченные на данной странице" 
+                HorizontalAlignment="Center" VerticalAlignment="Top" 
+                Width="250" 
+                Margin="3,3,3,3"/>
     </Grid>
 </UserControl>
