--- a/Tabs/Upload/UploadControl.xaml
+++ b/Tabs/Upload/UploadControl.xaml
@@ -6,17 +6,25 @@
              xmlns:local="clr-namespace:Ark.Tabs.Upload"
              mc:Ignorable="d" 
              d:DesignHeight="163" d:DesignWidth="800"
-             d:DataContext="{d:DesignInstance local:UploadModel}">
+             d:DataContext="{d:DesignInstance local:UploadModel}"
+             FontSize="14">
     <Grid Background="#FFFFFFFF" Margin="0,0,0,0">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Button Content="Загрузить" HorizontalAlignment="Center" Margin="3,3,3,3" VerticalAlignment="Top" Height="30" Width="80" Grid.Row="1" Command="{Binding AddFilesToQueue}"/>
-        <DataGrid ItemsControl.ItemsSource="{Binding Queue}" Margin="3,3,3,3" Grid.Row="0" AutoGenerateColumns="False">
+        <DataGrid ItemsControl.ItemsSource="{Binding Queue}" 
+                  Margin="3,3,3,3" 
+                  Grid.Row="0" 
+                  CanUserAddRows="False"
+                  CanUserSortColumns="False"
+                  IsReadOnly="True"
+                  AutoGenerateColumns="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Название" Binding="{Binding Name, Mode=OneWay}"/>
-                <DataGridTextColumn Header="Статус" Binding="{Binding Status, Mode=OneWay}"/>
+                <DataGridTextColumn Header="Путь" Binding="{Binding Filepath}"/>
+                <DataGridTextColumn Header="Статус" Binding="{Binding Status}"/>
+                <DataGridTextColumn Header="Сообщение ошибки" Binding="{Binding Exception.Message}"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
